crates/ir/tests/snapshots/lower_test__traits__trait_zero_arg_constrained_vec.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__trait_zero_arg_constrained_vec

trait Test[n8] { name(): String }
instance traits__trait_zero_arg_constrained_vec.Test[Vec$$Var0] { name=Test$$Vec$$Var0$$name }
instance traits__trait_zero_arg_constrained_vec.Test[Int] { name=Test$$Int$$name }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__trait_zero_arg_constrained_vec.Test, Int] = get_dict traits__trait_zero_arg_constrained_vec.Test[Int]
  let v2: Dict[traits__trait_zero_arg_constrained_vec.Test, Vec[Int]] = make_dict traits__trait_zero_arg_constrained_vec.Test[Vec[Int]](v1)
  let v3: String = trait_call traits__trait_zero_arg_constrained_vec.Test.name(v2)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Test$$Vec$$Var0$$name(v5: Dict[traits__trait_zero_arg_constrained_vec.Test, o8]) -> String =
  let v6: String = trait_call traits__trait_zero_arg_constrained_vec.Test.name(v5)
  v6

fn Test$$Int$$name() -> ~String =
  "yo"
