crates/ir/tests/snapshots/lower_test__traits__trait_zero_arg_inferred.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__trait_zero_arg_inferred

type MyStruct = MyStruct#0(Int)
trait Default[n8] { default(): n8 }
instance traits__trait_zero_arg_inferred.Default[Int] { default=Default$$Int$$default }
instance traits__trait_zero_arg_inferred.Default[MyStruct] { default=Default$$MyStruct$$default }
instance core/show.Show[MyStruct] { show=Show$$MyStruct$$show }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
declare println: (m) -> Unit

fn main() -> Unit =
  let v1: Dict[traits__trait_zero_arg_inferred.Default, Int] = get_dict traits__trait_zero_arg_inferred.Default[Int]
  let v0: Int = trait_call traits__trait_zero_arg_inferred.Default.default(v1)
  let v3: Dict[traits__trait_zero_arg_inferred.Default, MyStruct] = get_dict traits__trait_zero_arg_inferred.Default[MyStruct]
  let v2: MyStruct = trait_call traits__trait_zero_arg_inferred.Default.default(v3)
  let v4: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v5: Unit = call println(v4, v0)
  let v6: Dict[core/show.Show, MyStruct] = get_dict core/show.Show[MyStruct]
  let v7: Unit = call println(v6, v2)
  v7

fn Default$$Int$$default() -> ~Int =
  42

fn Default$$MyStruct$$default() -> ~MyStruct =
  let v8: ~MyStruct = construct MyStruct::MyStruct#0(10)
  v8

fn Show$$MyStruct$$show(v9: MyStruct) -> String =
  switch v9 {
    0 (v10: Int) ->
      let v11: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v12: String = trait_call core/show.Show.show(v11, v10)
      let v13: String = concat_string("MyStruct(", v12)
      let v14: String = concat_string(v13, ")")
      v14
  }
